--- a/index.html
+++ b/index.html
@@ -1,45 +1,112 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>myPod</title>
-      <style type="text/css">
-        body { background-color: #eaf3da; }
-      </style>
-  </head>
+    <meta charset="utf-8">
+    <title>Starbuzz Coffee</title>
+    <link rel="stylesheet" type="text/css" href="starbuzz.css">
+  </head> 
+
   <body>
+  <div id="allacontent">
+    <div id="header">
+      <img id="headerLogo"
+      src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">
+      <img id="headerSlogan"
+      src="images/headerSlogan.gif"
+      alt="Providing all the caffeine you need to power your life.">
+    </div>
+  </div>
 
-    <h1>Welcome to myPod</h1>
-    <p>
-      Welcome to the place to show off your iPod, wherever you might be.
-      Wanna join the fun? All you need is any iPod, from the early classic 
-      iPod to the latest iPod Nano, the smallest iPod Shuffle to the largest 
-      iPod Photo, and a digital camera.  Just take a snapshot of your iPod in
-      your favorite location and we'll be glad to post it on myPod. So, what 
-      are you waiting for?ahah?
-    </p>
+<div id="tableContainer">
+  <div id="tableRow">
+    <div id="main">
+      <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
+      <p>
+        At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
+        quality coffees and teas. Sure, we want you to have a great cup of coffee and a great 
+        coffee experience as well, but we're the only company that actively monitors and 
+        optimizes caffeine levels. So stop by and fill your cup, or order online with our new Bean 
+        Machine online order form, and get that quality Starbuzz coffee that you know will meet 
+        your caffeine standards.
+      </p>
+      <p>
+        And, did we mention <em>caffeine</em>? We've just started funding the guys doing all 
+        the wonderful research at the <a href="http://buzz.wickedlysmart.com"
+        title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
+        If you want the latest on coffee and other caffeine products, 
+        stop by and pay them a visit.
+      </p>
+      <h1>OUR STORY</h1>
+      <p>
+        "A man, a plan, a coffee bean". Okay, that doesn't make a palindrome, but it resulted
+        in a damn good cup of coffee.  Starbuzz's CEO is that man, and you already know his 
+        plan: a Starbuzz on every corner.
+      </p> 
+      <p>In only a few years he's executed that plan and today 
+        you can enjoy Starbuzz just about anywhere.  And, of course, the big news this year 
+        is that Starbuzz teamed up with Head First readers to create Starbuzz's Web presence,  
+        which is growing rapidly and helping to meet the caffeine needs of a whole new set of 
+        customers.  
+      </p>
+      <h1>STARBUZZ COFFEE BEVERAGES</h1>
+      <p>
+        We've got a variety of caffeinated beverages to choose
+        from at Starbuzz, including our 
+        <a href="beverages.html#house" title="House Blend">House Blend</a>,
+        <a href="beverages.html#mocha" title="Mocha Cafe Latte">Mocha Cafe Latte</a>, 
+        <a href="beverages.html#cappuccino" title="Cappuccino">Cappuccino</a>,
+        and a favorite of our customers, 
+        <a href="beverages.html#chai" title="Chai Tea">Chai Tea</a>.
+      </p>
+      <p>
+        We also offer a variety of coffee beans, whole or ground, for you to
+        take home with you.  Order your coffee today using our online
+        <a href="form.html">Bean Machine</a>, and take
+        the Starbuzz Coffee experience home.
+      </p>
+    </div>
+  </div>
+</div>
 
-    <h2>Seattle, Washington</h2>
-    <p>
-      Me and my iPod in Seattle!  You can see rain clouds and the 
-      Space Needle.  You can't see the 628 coffee shops.
-    </p>
-    <p>
-      <img src="thumbnails/seattle_video_med.jpg" alt="My video iPod in Seattle, WA">
-      <img src="thumbnails/seattle_classic.jpg" alt="A classic Ipod in Seattle, WA">
-      <img src="thumbnails/seattle_shuffle.jpg" alt="An iPod Shuffle in Seattle, WA">
-      <img src="thumbnails/seattle_downtown.jpg" alt="An iPod in downtown Seattle, WA">
-    </p>
+    <div id="sidebar">
+      <p class="beanheading">
+        <img src="images/bag.gif" alt="Bean Machine bag">
+        <br>
+        ORDER ONLINE
+        with the 
+        <a href="form.html">BEAN MACHINE</a>
+        <br>
+        <span class="slogan">
+            FAST <br>
+            FRESH <br>
+            TO YOUR DOOR <br>
+        </span>
+      </p>
+      <p>
+        Why wait?  You can order all our fine coffees right from the Internet with our new, 
+        automated Bean Machine.  How does it work?  Just click on the Bean Machine link, 
+        enter your order, and behind the scenes, your coffee is roasted, ground 
+        (if you want), packaged, and shipped to your door.
+      </p>
+    </div>
 
-    <h2>Birmingham, England</h2>
-    <p>
-      Here are some iPod photos around Birmingham. we've obviously got some
-      passionate folks over here who love their iPods. Check out the classic
-      red British telephone box!
-    </p>
+    <div id="footer">
+      &copy; 2012, Starbuzz Coffee
+      <br>
+      All trademarks and registered trademarks appearing on 
+      this site are the property of their respective owners.
+    </div>
 
-    <p>
-      <img src="thumbnails/britain.jpg" alt="An iPod in Birmingham at a telephone box">
-      <img src="thumbnails/applestore.jpg" alt="An iPod at the Birmingham Apple store">
-    </p>
+    <div id="award">
+      <img src="images/award.gif"
+      alt="Roaster of the Year award">
+    </div>
+
+    <div id="coupon">
+      <a href="freecoffee.html" title="Click here to get your fee coffee">
+        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+      </a>
+    </div>
   </body>
 </html>
 
