--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
   </head> 
 
   <body>
-  <div id="allacontent">
+    <div id="award">
+      <img src="images/award.gif"
+           alt="Roaster of the Year award">
+    </div>
+   <div id="allcontent">
     <div id="header">
       <img id="headerLogo"
       src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">
       <img id="headerSlogan"
-      src="images/headerSlogan.gif"
-      alt="Providing all the caffeine you need to power your life.">
+           src="images/headerSlogan.gif"
+           alt="Providing all the caffeine you need to power your life.">
     </div>
-  </div>
-
-<div id="tableContainer">
-  <div id="tableRow">
+   </div>
+   <div id="coupon">
+     <a href="freecoffee.html" title="Click here to get your free coffee">
+        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+     </a>
+   </div>
+   <div id="tableContainer">
+     <div id="tableRow">
     <div id="main">
       <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
       <p>
@@ -65,8 +73,20 @@
         the Starbuzz Coffee experience home.
       </p>
     </div>
-  </div>
-</div>
+
+    <div id="drinks">
+      <h1>BEVERAGES</h1>
+      <P>hOUSE bLEND, $1.49</P>
+      <P>Mocha Cafe Latte, $2.35</P>
+      <p>Cappuccino, $1.89</p>
+      <p>Chai Tea, $1.89</p>
+     <h1>ELIXIRS</h1>
+      <p>
+        We proudly serve elixirs brewed by our friends
+        at the Head First Lounge.
+      </p>
+      <p></p>
+    </div>
 
     <div id="sidebar">
       <p class="beanheading">
@@ -89,6 +109,8 @@
         (if you want), packaged, and shipped to your door.
       </p>
     </div>
+     </div>
+   </div>
 
     <div id="footer">
       &copy; 2012, Starbuzz Coffee
@@ -97,16 +119,6 @@
       this site are the property of their respective owners.
     </div>
 
-    <div id="award">
-      <img src="images/award.gif"
-      alt="Roaster of the Year award">
-    </div>
-
-    <div id="coupon">
-      <a href="freecoffee.html" title="Click here to get your fee coffee">
-        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
-      </a>
-    </div>
   </body>
 </html>
 
