--- a/index.html
+++ b/index.html
@@ -1,124 +1,233 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Starbuzz Coffee</title>
-    <link rel="stylesheet" type="text/css" href="starbuzz.css">
-  </head> 
+    <head>
+        <title>小米商城 - 小米MIX 3、小米8、 红米6pro、小米电视官方网站</title>
+        <link type="text/css" rel="stylesheet" href="ssr.css">
+    </head>
+    <body>
+      <div id="s123">
+      <div id="zhuyao">
+        <div id="yemie">
+          <a href="s233">小米商城</a>
+          <span id="s233">|</span>
+          <a href="">MIUI</a>
+          <span id="s233">|</span>
+          <a href="">loT</a>
+          <span id="s233">|</span>
+          <a href="">云服务</a>
+          <span id="s233">|</span>
+          <a href="">金融</a>
+          <span id="s233">|</span>
+          <a href="">有品</a>
+          <span id="s233">|</span>
+          <a href="">小爱开放平台</a>
+          <span id="s233">|</span>
+          <a href="">政企服务</a>
+          <span id="s233">|</span>
+          <a href="">下载app</a>
+          <span id="s233">|</span>
+          <a href="">Select Region</a>
+        </div>
+        <div id="gouwuche-drive">
+          <a href="">
+          <span id="gouwuche">购物车(0)</span>
+          </a>
+        </div>
+        <div id="z-io">
+          <a href="">登录</a>
+          <span id="c33">|</span>
+          <a href="">注册</a>
+          <span id="C33">|</span>
+          <a href="">消息通知</a>
+        </div>
+      </div>
+      </div>
+        <div id="logonav33">
+        <div id="logoCLP">
+          <div id="logo">
+            <a href=""><img src="logo.png"></a>
+          </div>
+          <div id="navCLP33">
 
-  <body>
-    <div id="award">
-      <img src="images/award.gif"
-           alt="Roaster of the Year award">
-    </div>
-   <div id="allcontent">
-    <div id="header">
-      <img id="headerLogo"
-      src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">
-      <img id="headerSlogan"
-           src="images/headerSlogan.gif"
-           alt="Providing all the caffeine you need to power your life.">
-    </div>
-   </div>
-   <div id="coupon">
-     <a href="freecoffee.html" title="Click here to get your free coffee">
-        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
-     </a>
-   </div>
-   <div id="tableContainer">
-     <div id="tableRow">
-    <div id="main">
-      <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
-      <p>
-        At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
-        quality coffees and teas. Sure, we want you to have a great cup of coffee and a great 
-        coffee experience as well, but we're the only company that actively monitors and 
-        optimizes caffeine levels. So stop by and fill your cup, or order online with our new Bean 
-        Machine online order form, and get that quality Starbuzz coffee that you know will meet 
-        your caffeine standards.
-      </p>
-      <p>
-        And, did we mention <em>caffeine</em>? We've just started funding the guys doing all 
-        the wonderful research at the <a href="http://buzz.wickedlysmart.com"
-        title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
-        If you want the latest on coffee and other caffeine products, 
-        stop by and pay them a visit.
-      </p>
-      <h1>OUR STORY</h1>
-      <p>
-        "A man, a plan, a coffee bean". Okay, that doesn't make a palindrome, but it resulted
-        in a damn good cup of coffee.  Starbuzz's CEO is that man, and you already know his 
-        plan: a Starbuzz on every corner.
-      </p> 
-      <p>In only a few years he's executed that plan and today 
-        you can enjoy Starbuzz just about anywhere.  And, of course, the big news this year 
-        is that Starbuzz teamed up with Head First readers to create Starbuzz's Web presence,  
-        which is growing rapidly and helping to meet the caffeine needs of a whole new set of 
-        customers.  
-      </p>
-      <h1>STARBUZZ COFFEE BEVERAGES</h1>
-      <p>
-        We've got a variety of caffeinated beverages to choose
-        from at Starbuzz, including our 
-        <a href="beverages.html#house" title="House Blend">House Blend</a>,
-        <a href="beverages.html#mocha" title="Mocha Cafe Latte">Mocha Cafe Latte</a>, 
-        <a href="beverages.html#cappuccino" title="Cappuccino">Cappuccino</a>,
-        and a favorite of our customers, 
-        <a href="beverages.html#chai" title="Chai Tea">Chai Tea</a>.
-      </p>
-      <p>
-        We also offer a variety of coffee beans, whole or ground, for you to
-        take home with you.  Order your coffee today using our online
-        <a href="form.html">Bean Machine</a>, and take
-        the Starbuzz Coffee experience home.
-      </p>
-    </div>
+            <div id="navlist33">
+              <span id="navitem33"><a href="">小米手机</a></span>
+              <span id="navitem"><a href="">红米</a></span>
+              <span id="navitem"><a href="">电视</a></span>
+              <span id="navitem"><a href="">笔记本</a></span>
+              <span id="navitem"><a href="">空调</a></span>
+              <span id="navitem"><a href="">新品</a></span>
+              <span id="navitem"><a href="">路由器</a></span>
+              <span id="navitem"><a href="">只能硬件</a></span>
+              <span id="navitem"><a href="">服务</a></span>
+              <span id="navitem"><a href="">社区</a></span>
+            </div>
 
-    <div id="drinks">
-      <h1>BEVERAGES</h1>
-      <P>hOUSE bLEND, $1.49</P>
-      <P>Mocha Cafe Latte, $2.35</P>
-      <p>Cappuccino, $1.89</p>
-      <p>Chai Tea, $1.89</p>
-     <h1>ELIXIRS</h1>
-      <p>
-        We proudly serve elixirs brewed by our friends
-        at the Head First Lounge.
-      </p>
-      <p></p>
-    </div>
+            <div id="main-nav">
+              <ul id="main-33">
+              <li><a href="">手机 电话卡</a></li>
+              <li><a href="">电视 盒子</a></li>
+              <li><a href="">笔记本 平板</a></li>
+              <li><a href="">家电 插线板</a></li>
+              <li><a href="">出行 穿戴</a></li>
+              <li><a href="">智能 路由器</a></li>
+              <li><a href="">电源 配件</a></li>
+              <li><a href="">健康 儿童</a></li>
+              <li><a href="">耳机 音响</a></li>
+              <li><a href="">生活 箱包</a></li>
+              </ul>
+            </div>
+          </div>
+          <div id="header-search">
+            <form action=""method="get">
+              <div id="kuan"><input name="" type="text"/></div><!--搜索框-->
+            </form>
+          </div>
+          <div id="picture33">
+          <a href=""><img id="pic3" src="xiaomi3.jpg"></a>
+          </div>
+        </div>
+        </div>
+      <div id="home-main-clp">
+        <div id="xiao-tu-biao33">
+          <ul id="main-list2002">
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">选购手机</a>
+            </li>
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">企业团购</a>
+            </li>
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">F码通道</a>
+            </li>
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">米粉卡</a>
+            </li>
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">以旧换新</a>
+            </li>
+            <li id="content-list33">
+              <a id ="content-listclp" href=""><img id="iconfont1" src="ion.png">话费充值</a>
+            </li>
+          </ul>
+        </div>
+        <div id="home-main-33">
+          <ul id="home-promo-list">
+            <li id="first">
+              <a id="CLP" href=""><img id="pic4" src="xiaomi4.jpg"></a>
+            </li>
+            <li id="first">
+              <a id="CLP" href=""><img id="pic4" src="xiaomi5.jpg"></a>
+            </li>
+            <li id="first">
+              <a id="CLP" href=""><img id="pic4" src="xiaomi6.jpg"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="xiaomishanggou3">
+        <div id="xiaomishanggou2">
+          <div id="box">
+            <h2 id="title">小米闪购</h2>
+            <div id="more">
+              <div id="jiantou33">
+                <a id="zuojiantou33" href=""><img src="xiaomi7.png"></a>
 
-    <div id="sidebar">
-      <p class="beanheading">
-        <img src="images/bag.gif" alt="Bean Machine bag">
-        <br>
-        ORDER ONLINE
-        with the 
-        <a href="form.html">BEAN MACHINE</a>
-        <br>
-        <span class="slogan">
-            FAST <br>
-            FRESH <br>
-            TO YOUR DOOR <br>
-        </span>
-      </p>
-      <p>
-        Why wait?  You can order all our fine coffees right from the Internet with our new, 
-        automated Bean Machine.  How does it work?  Just click on the Bean Machine link, 
-        enter your order, and behind the scenes, your coffee is roasted, ground 
-        (if you want), packaged, and shipped to your door.
-      </p>
-    </div>
-     </div>
-   </div>
-
-    <div id="footer">
-      &copy; 2012, Starbuzz Coffee
-      <br>
-      All trademarks and registered trademarks appearing on 
-      this site are the property of their respective owners.
-    </div>
-
-  </body>
+              </div>
+            </div>
+          </div>
+          <div id="box2-33">
+            <div id="diaojishi3">
+              <ul id="jishi">
+                <li id="shijian"><a id="jishi1" href><img id="jishutupian" src="xiaomi8.png"></a></li>
+                <li id="shijian1"><a id="jishi1" href><img id="jishutupian" src="xiaomi9.png"></a></li>
+                <li id="shijian1"><a id="jishi1" href><img id="jishutupian" src="xiaomi10.png"></a></li>
+                <li id="shijian1"><a id="jishi1" href><img id="jishutupian" src="xiaomi11.png"></a></li>
+                <li id="shijian2"><a id="jishi1" href><img id="jishutupian" src="xiaomi12.png"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="heishao-33">
+          <a href="">
+            <img src="xiaomi13.png">
+          </a>
+        </div>
+      </div>
+      <div id="dakuang-CLP">
+        <div id="xiaokuang-CLP">
+          <div id="zhineng-33">
+            <div id="zhineng-top">
+              <h2 id="zhineng">智能</h2>
+              <div id="zhineng-top-right">
+                <ui id="zhineng-top-main">
+                  <li id="top-main">
+                    <a href="">热门</a>
+                  </li>
+                  <li id="top-main">
+                    <a href="">出行</a>
+                  </li>
+                  <li id="top-main">
+                    <a href="">健康</a>
+                  </li>
+                  <li id="top-main">
+                    <a href="">酷玩</a>
+                  </li>
+                  <li id="top-main1">
+                    <a href="">路由器</a>
+                  </li> 
+                </ui>
+              </div>
+            </div>
+            <div id="zhineng-main">
+              <div id="zhineng-main1">
+                <div id="zhineng-main-left">
+                  <ul id="zhineng-main-left-main">
+                    <li id="zhineng-main-left-main-left">
+                      <a id="pic5"href=""><img id="pic55" src="xiaomi14.PNG"></a>
+                    </li>
+                    <li id="zhineng-main-left-main-left">
+                        <a id="pic5"href=""><img id="pic55" src="xiaomi15.PNG"></a>
+                    </li>
+                  </ul>
+                </div>
+                <div id="zhineng-main-right">
+                    <div id="zhineng-main-right-main">
+                      <ul id="zhineng-main-right-tu">
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi16.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi17.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi18.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi19.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi20.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi21.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi22.png"></a>
+                        </li>
+                        <li id="zhineng-main-right-main-tupian">
+                          <a id="pic6" href=""><img id="pic66" src="xiaomi23.png"></a>
+                        </li>
+                      </ul>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="zhineng-bottom">
+            <a id="pic7"href=""><img id="pic77" src="xiaomi24.png"></a>
+          </div>
+        </div>
+      </div> 
+    </body>
 </html>
+
 
